--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -13,8 +13,38 @@ header {
   font-size: 2.25rem;
 }
 .header__logo:hover { text-decoration: none; }
-
 header .nav-user-items { font-size: 20px; }
 header .nav-user-items .nav-item:last-child { margin-right: 10px; }
 header .nav-user-items .nav-item:not(:last-child) { margin-right: 10px; }
 header .nav-user-items a.nav-item { color: #ffffff; }
+
+/* >>> Login Form <<< */
+.form-signin {
+  margin: auto;
+  max-width: 330px;
+  padding: 15px;
+  width: 100%;
+}
+.form-signin .checkbox {
+  font-weight: 400;
+}
+.form-signin .form-control {
+  box-sizing: border-box;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+  position: relative;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-bottom: -1px;
+}
+.form-signin input[type="password"] {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-bottom: 10px;
+}
