--- a/app/components/products/products.view.html
+++ b/app/components/products/products.view.html
@@ -6,14 +6,11 @@
       </div>
       <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="Buscar Productos" aria-label="Buscar Productos">
       <div class="input-group-append">
-        <button ng-click="productsVM.showOnlyAvailableProducts()">Solo Disponibles</button>
-      </div>
-      <div class="input-group-append">
-        <span class="input-group-text">.00</span>
+        <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-secondary">Solo Disponibles</button>
       </div>
     </div>
   </div>
-  <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
+  <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | filter : ({available:productsVM.only_availables} || '') | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
     <div class="card flex-md-row mb-4 shadow-sm h-md-250">
       <div class="card-body d-flex flex-column align-items-start">
         <strong class="d-inline-block mb-2 text-primary">${{product.price}}</strong>
