Inprove Availability filter

--- a/app/components/products/products.view.html
+++ b/app/components/products/products.view.html
@@ -4,15 +4,28 @@
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1"><i class="fab fa-superpowers"></i></span>
       </div>
-      <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="Buscar Productos" aria-label="Buscar Productos">
+      <input ng-model="productsVM.search_box" type="search" class="form-control" placeholder="{{productsVM.only_availables == true ? 'Buscar unicamente en productos disponibles' : 'Buscar en todos los productos'}}" aria-label="Buscar Productos">
       <div class="input-group-append">
         <button ng-click="productsVM.cleanSearchBox()" class="btn btn-danger" ng-disabled="!productsVM.search_box.length"><i class="fas fa-eraser"></i></button>
       </div>
       <div class="input-group-append">
-        <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-secondary">Solo Disponibles</button>
+        <button ng-click="productsVM.showOnlyAvailableProducts()" ng-class="{'btn-success': (productsVM.only_availables == true)}" class="btn btn-primary">
+          <i class="far fa-hand-point-up"></i>
+          <span ng-if="productsVM.only_availables == false">Ver disponibles</span>
+          <span ng-if="productsVM.only_availables == true">Ver todos</span>
+        </button>
       </div>
     </div>
   </div>
+  <h5 class="col-md-12 d-flex justify-content-between">
+    <div>
+      <span ng-if="!productsVM.search_box.length">Productos Destacados: </span>
+      <span ng-if="productsVM.search_box.length">Buscar "{{productsVM.search_box}}"" en todos los productos : </span>
+    </div>
+    <small>
+      <a href="/index.html?#!/categories">Ver todas las categorías</a>
+    </small>
+  </h5>
   <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | filter : ({available:productsVM.only_availables} || '') | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
     <div class="card flex-md-row mb-4 shadow-sm h-md-250">
       <div class="card-body d-flex flex-column align-items-start">
