--- a/app/components/products/products.view.html
+++ b/app/components/products/products.view.html
@@ -26,23 +26,11 @@
       <a href="/index.html?#!/categories">Ver todas las categorías</a>
     </small>
   </h5>
+  <!-- Product -->
   <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | filter : ({available:productsVM.only_availables} || '') | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
-    <div class="card flex-md-row mb-4 shadow-sm h-md-250">
-      <div class="card-body d-flex flex-column align-items-start">
-        <strong class="d-inline-block mb-2 text-primary">${{product.price}}</strong>
-        <h3 class="product__title mb-0">
-          <a class="text-dark" href="#">{{product.name}}</a>
-        </h3>
-        <div class="mb-1 text-muted">Disponibilidad: {{product.quantity}}</div>
-        <p class="card-text mb-auto">{{product.description}}.</p>
-        <a href="#">Ver Detalles</a>
-        <a href="#">Comprar</a>
-      </div>
-      <figure class="product__figure">
-        <img class="card-img-right flex-auto d-none d-lg-block" data-src="https://images.rappi.com.ar/products/{{product.img}}" alt="{{product.name}}" src="https://images.rappi.com.ar/products/{{product.img}}" data-holder-rendered="true" style="width: 200px; max-height: 200px;">
-      </figure>
-    </div>
+    <product-element product="product"></product-element>
   </div>
+
   <div class="col-md-12 text-center"> 
       <button ng-click="productsVM.loadMoreProducts()" class="btn btn-primary">Cargar más productos...</button>
   </div>
