--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,7 +19,7 @@ header {
   font-size: 2.25rem;
 }
 .header__logo:hover { text-decoration: none; }
-header .nav-user-items { font-size: 20px; }
+header .nav-user-items i { font-size: 20px; }
 header .nav-user-items .nav-item:last-child { margin-right: 10px; }
 header .nav-user-items .nav-item:not(:last-child) { margin-right: 10px; }
 header .nav-user-items a.nav-item { color: #ffffff; }
