--- a/app/components/hero/hero.view.html
+++ b/app/components/hero/hero.view.html
@@ -1,7 +1,8 @@
 <div class="hero jumbotron p-3 p-md-5 text-white rounded bg-brand" ng-controller="HeroController as heroVM">
   <div class="row">
     <div class="col-md-8 px-0">
-      <h1 class="display-4 font-italic">Destacado: {{heroVM.featured_product.name}}</h1>
+      <h4 class="font-italici">Destacado: </h4>
+      <h1 class="font-italic">{{heroVM.featured_product.name}}</h1>
       <p class="lead my-3">{{heroVM.featured_product.description}}.</p>
       <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Comprar</a></p>
     </div>
