--- a/app/components/product/product.view.html
+++ b/app/components/product/product.view.html
@@ -1,4 +1,4 @@
-<div class="product card flex-md-row mb-4 shadow-sm h-md-250">
+<div class="product card flex-md-row mb-4 shadow-sm h-md-250" id="{{product.id}}">
   <span ng-click="productsVM.addToFavorites($event, product)" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
   <div class="card-body d-flex flex-column align-items-start">
     <strong class="d-inline-block mb-2 text-primary">${{product.price}}</strong>
