--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -21,7 +21,7 @@ header {
   font-size: 2.25rem;
 }
 .header__logo:hover { text-decoration: none; }
-header .nav-user-items i { font-size: 20px; }
+header .nav-user-items i { cursor: pointer; font-size: 20px; }
 header .nav-user-items .nav-item:last-child { margin-right: 10px; }
 header .nav-user-items .nav-item:not(:last-child) { margin-right: 10px; }
 header .nav-user-items a.nav-item { color: #ffffff; }
@@ -111,9 +111,12 @@ header .nav-user-items a.nav-item { color: #ffffff; }
   text-shadow: 0px 0px 1px currentColor;
 }
 /* >>> hero <<< */
+.hero {
+  border: 5px solid var(--brand);
+}
 .hero__figure { margin: 0; }
 .hero__figure img {
   border-radius: 3px;
-  box-shadow: 0 0 10px 0 var(--white);
+  box-shadow: 0 0 10px 0 var(--brand);
   max-height: 200px;
 }
