--- a/app/components/products/products.view.html
+++ b/app/components/products/products.view.html
@@ -1,4 +1,10 @@
 <div class="row mb-2" ng-controller="ProductsController as productsVM">
+  <div class="css-order-by col-md-12 d-flex justify-content-start align-items-center mb-3">
+    <span class="mr-2">Ordenar por:</span>
+    <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('available')" ng-class="{'btn-outline-success': (productsVM.order_by == 'available')}">Disponibilidad</button>
+    <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('quantity')" ng-class="{'btn-outline-success': (productsVM.order_by == 'quantity')}">Cantidad</button>
+    <button class="btn btn-outline-primary mr-2" ng-click="productsVM.orderProductsBy('price')" ng-class="{'btn-outline-success': (productsVM.order_by == 'price')}">Precio</button>
+  </div>
   <div class="col-md-12 text-center">
     <div class="input-group mb-3">
       <div class="input-group-prepend">
@@ -27,7 +33,7 @@
     </small>
   </h5>
   <!-- Product -->
-  <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | filter : ({available:productsVM.only_availables} || '') | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
+  <div ng-repeat="product in productsVM.list_of_products | filter : productsVM.search_box | filter : ({available:productsVM.only_availables} || '') | orderBy : productsVM.order_by  | limitTo : productsVM.limit_to : beginner track by $index" class="product col-md-6 col-lg-4">
     <product-element></product-element>
   </div>
 
