--- a/app/components/hero/hero.view.html
+++ b/app/components/hero/hero.view.html
@@ -4,7 +4,9 @@
       <h4 class="font-italic">Destacado: </h4>
       <h2 class="font-italic text-dark">{{heroVM.featured_product.name}}</h2>
       <p class="lead my-3 text-dark">{{heroVM.featured_product.description}}.</p>
-      <p class="lead mb-0"><a href="javascript:void(0)" class="btn btn-outline-success font-weight-bold">Comprar</a></p>
+      <p class="lead mb-0">
+        <a ng-click="heroVM.addToCart(heroVM.featured_product)" href="javascript:void(0)" class="btn btn-outline-success font-weight-bold">Comprar</a>
+      </p>
     </div>
     <div class="col-md-4 px-0 text-right">
       <figure class="hero__figure">
