--- a/app/components/product/product.view.html
+++ b/app/components/product/product.view.html
@@ -1,5 +1,5 @@
 <div class="product card flex-md-row mb-4 shadow-sm h-md-250" id="{{product.id}}">
-  <span ng-click="productsVM.addToFavorites($event, product)" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
+  <span ng-click="productsVM.addToFavorites(product)" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
   <div class="card-body d-flex flex-column align-items-start">
     <strong class="d-inline-block mb-2 text-primary">${{product.price}}</strong>
     <h3 class="product__title mb-0">
@@ -12,6 +12,6 @@
     <img class="card-img-right flex-auto d-none d-lg-block" data-src="https://images.rappi.com.ar/products/{{product.img}}" alt="{{product.name}}" src="https://images.rappi.com.ar/products/{{product.img}}" data-holder-rendered="true" style="width: 200px; max-height: 200px;">
   </figure>
   <div class="product-options bg-success">
-    <button ng-click="productsVM.addToCart($event, product)" class="product-options__option--buy btn btn-success">Agregar a la Compra</button>
+    <button ng-click="productsVM.addToCart(product)" class="product-options__option--buy btn btn-success">Agregar a la Compra</button>
   </div>
 </div>
