--- a/app/components/product/product.view.html
+++ b/app/components/product/product.view.html
@@ -1,5 +1,5 @@
 <div class="product card flex-md-row mb-4 shadow-sm h-md-250" id="{{product.id}}">
-  <span ng-click="productsVM.addToFavorites(product)" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
+  <span ng-click="productsVM.addToFavorites(product)" ng-class="{'is-favorite': productsVM.isFavorite(product)}" class="product-favorite btn btn-link"><i class="far fa-heart"></i></span>
   <div class="card-body d-flex flex-column align-items-start">
     <strong class="d-inline-block mb-2 text-primary">${{product.price}}</strong>
     <h3 class="product__title mb-0">
